# funpy

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yaml  .travis.yml  AUTHORS  ChangeLog  README.md  setup.cfg  setup.py  tox.ini
funpy/: __init__.py  ast.py  compute.py  func.py
test/: test_ast.py  test_func.py
