[metadata]

name = funpy
author = Federico Ressi
summary = Python funtional programming tools for numeric data
description-file = README.md
home-page = https://github.com/FedericoRessi/funpy
license = Apache-2

classifiers =
    Development Status :: 3 - Alpha"
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

keywords =
    numpy
    functional


[files]
packages =
    funpy
